[gd_scene load_steps=45 format=3 uid="uid://dfbctbhmnfnqk"]

[ext_resource type="PackedScene" uid="uid://bs5cxi0sbahk2" path="res://Scenes/Player/character_controller/player_controller.tscn" id="1_bwvnj"]
[ext_resource type="Script" uid="uid://ckrn2il06n3rs" path="res://Scripts/main.gd" id="1_snt32"]
[ext_resource type="Script" uid="uid://cneyed066dlmf" path="res://Scripts/Player/controllers/camera_controller.gd" id="2_p4n5t"]
[ext_resource type="Resource" uid="uid://ciaejmyvkfy8g" path="res://Player_inventory/Player_inv.tres" id="3_6vnf6"]
[ext_resource type="PackedScene" uid="uid://dgwepctv6o1xs" path="res://Scenes/Inventory/inventory.tscn" id="3_u0k4q"]
[ext_resource type="Script" uid="uid://dx6g4i4fgydl2" path="res://Scripts/Inventory/inventory_data_equip_head.gd" id="4_504l2"]
[ext_resource type="Script" uid="uid://j36g00ej1a13" path="res://Scripts/Inventory/inventory_interface.gd" id="4_qriwk"]
[ext_resource type="PackedScene" uid="uid://crmaf7p4ixc2c" path="res://Scenes/Chest/chest.tscn" id="5_3bb5u"]
[ext_resource type="Script" uid="uid://2fr1mt5j8kqp" path="res://Scripts/Inventory/inventory_data_equip_torso.gd" id="6_nlbdl"]
[ext_resource type="Script" uid="uid://cnwrglu8ie6j7" path="res://Scripts/Inventory/inventory_data_equip_legs.gd" id="7_0npqe"]
[ext_resource type="PackedScene" uid="uid://clw23l0nxsi3s" path="res://Scenes/Inventory/slot.tscn" id="7_ycnua"]
[ext_resource type="Script" uid="uid://bq8hidjoakk31" path="res://Scripts/Inventory/inventory_data_equip_hands.gd" id="8_gh81j"]
[ext_resource type="PackedScene" uid="uid://5yhf06itux7" path="res://Scenes/Inventory/hot_bar_inventory.tscn" id="8_jonna"]
[ext_resource type="Script" uid="uid://b2g8x81ldwlhr" path="res://Player_inventory/inventory/inventory_data.gd" id="9_fbioy"]
[ext_resource type="Script" uid="uid://cr3gs5h2hk5m6" path="res://Scripts/Inventory/inventory_data_equip_feet.gd" id="9_umujn"]
[ext_resource type="Script" uid="uid://cchjne1wf1r33" path="res://Player_inventory/inventory/slot_data.gd" id="10_jonna"]
[ext_resource type="Script" uid="uid://1r846be1pax8" path="res://Scripts/Inventory/inventory_data_equip_weapon.gd" id="10_nihba"]
[ext_resource type="Script" uid="uid://cuhn11ekvn0nl" path="res://Scripts/Inventory/inventory_data_equip_offhand.gd" id="11_u0thq"]
[ext_resource type="Script" uid="uid://cflo6ohrkfem6" path="res://Scripts/Inventory/inventory_data_equip_trinket1.gd" id="12_cfml5"]
[ext_resource type="Script" uid="uid://bus53uukwc37" path="res://Scripts/Inventory/inventory_data_equip_trinket2.gd" id="13_cfml5"]
[ext_resource type="Script" uid="uid://tb5nk8f62x4t" path="res://Scripts/Inventory/inventory_data_equip_trinket3.gd" id="14_657gw"]

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_bwvnj"]

[sub_resource type="Sky" id="Sky_p4n5t"]
sky_material = SubResource("PhysicalSkyMaterial_bwvnj")

[sub_resource type="Environment" id="Environment_u0k4q"]
background_mode = 2
sky = SubResource("Sky_p4n5t")

[sub_resource type="Resource" id="Resource_0npqe"]
script = ExtResource("4_504l2")
slot_datas = Array[ExtResource("10_jonna")]([null])
metadata/_custom_type_script = "uid://dx6g4i4fgydl2"

[sub_resource type="Resource" id="Resource_3fx2p"]
script = ExtResource("6_nlbdl")
slot_datas = Array[ExtResource("10_jonna")]([null])
metadata/_custom_type_script = "uid://2fr1mt5j8kqp"

[sub_resource type="Resource" id="Resource_gh81j"]
script = ExtResource("7_0npqe")
slot_datas = Array[ExtResource("10_jonna")]([null])
metadata/_custom_type_script = "uid://cnwrglu8ie6j7"

[sub_resource type="Resource" id="Resource_8o3se"]
script = ExtResource("8_gh81j")
slot_datas = Array[ExtResource("10_jonna")]([null])
metadata/_custom_type_script = "uid://bq8hidjoakk31"

[sub_resource type="Resource" id="Resource_nihba"]
script = ExtResource("9_umujn")
slot_datas = Array[ExtResource("10_jonna")]([null])
metadata/_custom_type_script = "uid://cr3gs5h2hk5m6"

[sub_resource type="Resource" id="Resource_657gw"]
script = ExtResource("10_nihba")
slot_datas = Array[ExtResource("10_jonna")]([null])
metadata/_custom_type_script = "uid://1r846be1pax8"

[sub_resource type="Resource" id="Resource_wvqtb"]
script = ExtResource("11_u0thq")
slot_datas = Array[ExtResource("10_jonna")]([null])
metadata/_custom_type_script = "uid://cuhn11ekvn0nl"

[sub_resource type="Resource" id="Resource_c1svb"]
script = ExtResource("12_cfml5")
slot_datas = Array[ExtResource("10_jonna")]([null])
metadata/_custom_type_script = "uid://cflo6ohrkfem6"

[sub_resource type="Resource" id="Resource_qi717"]
script = ExtResource("13_cfml5")
slot_datas = Array[ExtResource("10_jonna")]([null])
metadata/_custom_type_script = "uid://bus53uukwc37"

[sub_resource type="Resource" id="Resource_sop5y"]
script = ExtResource("14_657gw")
slot_datas = Array[ExtResource("10_jonna")]([null])
metadata/_custom_type_script = "uid://tb5nk8f62x4t"

[sub_resource type="SphereShape3D" id="SphereShape3D_u0k4q"]
radius = 0.2

[sub_resource type="BoxShape3D" id="BoxShape3D_u0k4q"]
size = Vector3(30, 1, 30)

[sub_resource type="BoxMesh" id="BoxMesh_snt32"]
size = Vector3(30, 1, 30)

[sub_resource type="BoxShape3D" id="BoxShape3D_bwvnj"]
size = Vector3(1, 5, 10)

[sub_resource type="BoxMesh" id="BoxMesh_p4n5t"]
size = Vector3(1, 5, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_p4n5t"]
size = Vector3(100, 1, 100)

[sub_resource type="BoxMesh" id="BoxMesh_u0k4q"]
size = Vector3(100, 1, 100)

[sub_resource type="Curve3D" id="Curve3D_bwvnj"]
_data = {
"points": PackedVector3Array(0, 0.935961, 0.324611, 0, -0.935961, -0.324611, 0, -0.00261962, 0.0183392, 0, 6.93361, 12.9289, 0, -6.93361, -12.9289, 0, -27.8947, -27.6661, 0, -1.8156, 2.31993, 0, 1.8156, -2.31993, 0, -40.171, -72.7317),
"tilts": PackedFloat32Array(0, 0, 0)
}
point_count = 3

[sub_resource type="Curve3D" id="Curve3D_p4n5t"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, -0.414092, 0.636658, 0.141638, 1.985, 10.9018, -0.141638, -1.985, -10.9018, 0, -9.27885, -14.0492, 8.02394, -2.48169, 12.0359, -8.02394, 2.48169, -12.0359, -6.85066, -7.57083, -52.3227, 4.47048, 0, -20.8623, -4.47048, 0, 20.8623, -39.8634, -13.2784, -37.765),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[sub_resource type="Resource" id="Resource_504l2"]
script = ExtResource("9_fbioy")
slot_datas = Array[ExtResource("10_jonna")]([null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null])
metadata/_custom_type_script = "uid://b2g8x81ldwlhr"

[node name="TestWorld" type="Node3D"]
script = ExtResource("1_snt32")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_u0k4q")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, 0.353553, -0.612372, 0, 0.866025, 0.5, 0.707107, -0.353553, 0.612372, 0, 3.59168, 0)
light_energy = 1.66
shadow_enabled = true

[node name="MainCharacter" parent="." instance=ExtResource("1_bwvnj")]
collision_layer = 2
inventory_data = ExtResource("3_6vnf6")
equip_inventory_head = SubResource("Resource_0npqe")
equip_inventory_torso = SubResource("Resource_3fx2p")
equip_inventory_legs = SubResource("Resource_gh81j")
equip_inventory_hands = SubResource("Resource_8o3se")
equip_inventory_feet = SubResource("Resource_nihba")
equip_inventory_weapon = SubResource("Resource_657gw")
equip_inventory_offhand = SubResource("Resource_wvqtb")
equip_inventory_trinket1 = SubResource("Resource_c1svb")
equip_inventory_trinket2 = SubResource("Resource_qi717")
equip_inventory_trinket3 = SubResource("Resource_sop5y")
auto_bhop = false

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 0, 0, 0)
script = ExtResource("2_p4n5t")

[node name="SpringArm3D" type="SpringArm3D" parent="CameraController"]
shape = SubResource("SphereShape3D_u0k4q")
spring_length = 3.0

[node name="Camera3D" type="Camera3D" parent="CameraController/SpringArm3D"]

[node name="LookAt" type="Node3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0170243, -1.32611)

[node name="InteractRay" type="RayCast3D" parent="CameraController"]
target_position = Vector3(0, 0, -2)
collision_mask = 4

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_u0k4q")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D/CollisionShape3D"]
mesh = SubResource("BoxMesh_snt32")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.3725, 2.68913, 0)
shape = SubResource("BoxShape3D_bwvnj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D/CollisionShape3D2"]
mesh = SubResource("BoxMesh_p4n5t")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(0.687785, 0.725915, 0, -0.725915, 0.687785, 0, 0, 0, 1, 48.8186, -36.3057, 0)
shape = SubResource("BoxShape3D_p4n5t")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D/CollisionShape3D3"]
mesh = SubResource("BoxMesh_u0k4q")

[node name="Surf" type="Node3D" parent="."]

[node name="Path3D" type="Path3D" parent="Surf"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.151485, -15.1549)
curve = SubResource("Curve3D_bwvnj")

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="Surf/Path3D"]
use_collision = true
polygon = PackedVector2Array(-2.5, 0, 0, 3, 2.5, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 0.0
path_rotation = 2
path_rotation_accurate = false
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="Path3D2" type="Path3D" parent="Surf"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -49.827, -133.453)
curve = SubResource("Curve3D_p4n5t")

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="Surf/Path3D2"]
use_collision = true
polygon = PackedVector2Array(-2.5, 0, 0, 3, 2.5, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 0.0
path_rotation = 2
path_rotation_accurate = false
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="Checkpoint_1" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.309108, 0)

[node name="UI" type="CanvasLayer" parent="."]

[node name="InventoryInterface" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_qriwk")

[node name="PlayerInventory" parent="UI/InventoryInterface" instance=ExtResource("3_u0k4q")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0

[node name="Equip inventory Head" parent="UI/InventoryInterface" instance=ExtResource("3_u0k4q")]
layout_mode = 0
offset_left = 450.0
offset_top = 10.0
offset_right = 490.00006
offset_bottom = 50.0

[node name="Equip inventory Trinket" parent="UI/InventoryInterface" instance=ExtResource("3_u0k4q")]
layout_mode = 0
offset_left = 535.0
offset_top = 10.0
offset_right = 575.00006
offset_bottom = 50.0

[node name="Equip inventory Trinket2" parent="UI/InventoryInterface" instance=ExtResource("3_u0k4q")]
layout_mode = 0
offset_left = 535.0
offset_top = 95.0
offset_right = 575.00006
offset_bottom = 135.0

[node name="Equip inventory Trinket3" parent="UI/InventoryInterface" instance=ExtResource("3_u0k4q")]
layout_mode = 0
offset_left = 535.0
offset_top = 180.0
offset_right = 575.00006
offset_bottom = 220.0

[node name="Equip inventory Torso" parent="UI/InventoryInterface" instance=ExtResource("3_u0k4q")]
layout_mode = 0
offset_left = 450.0
offset_top = 95.0
offset_right = 490.00006
offset_bottom = 134.99997

[node name="Equip inventory Legs" parent="UI/InventoryInterface" instance=ExtResource("3_u0k4q")]
layout_mode = 0
offset_left = 450.0
offset_top = 265.0
offset_right = 490.00006
offset_bottom = 304.99997

[node name="Equip inventory Offhand" parent="UI/InventoryInterface" instance=ExtResource("3_u0k4q")]
layout_mode = 0
offset_left = 535.0
offset_top = 265.0
offset_right = 575.00006
offset_bottom = 304.99997

[node name="Equip inventory Hands" parent="UI/InventoryInterface" instance=ExtResource("3_u0k4q")]
layout_mode = 0
offset_left = 450.0
offset_top = 180.0
offset_right = 490.00006
offset_bottom = 219.99997

[node name="Equip inventory Feet" parent="UI/InventoryInterface" instance=ExtResource("3_u0k4q")]
layout_mode = 0
offset_left = 450.0
offset_top = 350.0
offset_right = 490.00006
offset_bottom = 389.99997

[node name="Equip inventory Weapon" parent="UI/InventoryInterface" instance=ExtResource("3_u0k4q")]
layout_mode = 0
offset_left = 535.0
offset_top = 350.0
offset_right = 575.00006
offset_bottom = 389.99997

[node name="ExternalInventory" parent="UI/InventoryInterface" instance=ExtResource("3_u0k4q")]
layout_mode = 0
offset_left = 1117.0
offset_top = 360.0
offset_right = 1157.0
offset_bottom = 400.0

[node name="GrabbedSlot" parent="UI/InventoryInterface" instance=ExtResource("7_ycnua")]
visible = false
modulate = Color(1, 1, 1, 0.47843137)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="HotBarInventory" parent="UI" instance=ExtResource("8_jonna")]
offset_left = 10.0
offset_top = 10.0
offset_right = 294.0
offset_bottom = 90.0

[node name="Chest" parent="." groups=["external_inventory"] instance=ExtResource("5_3bb5u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.434839, 0, 3.6607308)
inventory_data = SubResource("Resource_504l2")
